--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -78,9 +78,9 @@
   --color-tx-normal:      var(--flexoki-200);
   --color-tx-muted:       var(--flexoki-500);
   --color-tx-faint:       var(--flexoki-700);
-  --color-ui-normal:      var(--flexoki-900);
-  --color-ui-hover:       var(--flexoki-850);
-  --color-ui-active:      var(--flexoki-800);
+  --color-ui-normal:      var(--flexoki-850);
+  --color-ui-hover:       var(--flexoki-800);
+  --color-ui-active:      var(--flexoki-700);
   --color-action:         var(--flexoki-orange-400);
   --color-bg-hover:       var(--flexoki-900);
   --color-highlight:      var(--flexoki-yellow-900);
